{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 18,
  "lineage": "8c32b426-ae6a-bae1-d4f1-b2987fc6e64d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ranky-internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:637423483220:internet-gateway/igw-003e25bb8eb33376d",
            "id": "igw-003e25bb8eb33376d",
            "owner_id": "637423483220",
            "tags": {
              "Name": "ranky-internet-gateway"
            },
            "tags_all": {
              "Name": "ranky-internet-gateway"
            },
            "vpc_id": "vpc-0380554537269c437"
          },
          "dependencies": [
            "aws_vpc.ranky-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ranky-public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:637423483220:route-table/rtb-0ad9ca19c70a98c99",
            "id": "rtb-0ad9ca19c70a98c99",
            "owner_id": "637423483220",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-003e25bb8eb33376d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ranky-public-rt"
            },
            "tags_all": {
              "Name": "ranky-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0380554537269c437"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ranky-internet-gateway",
            "aws_vpc.ranky-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ranky-public-ta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a0cd5ed4faba3c2",
            "route_table_id": "rtb-0ad9ca19c70a98c99",
            "subnet_id": "subnet-086f8f1d270510fe9"
          },
          "dependencies": [
            "aws_internet_gateway.ranky-internet-gateway",
            "aws_route_table.ranky-public-rt",
            "aws_subnet.ranky-subnet",
            "aws_vpc.ranky-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ranky-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:637423483220:security-group/sg-05db40e061281b975",
            "description": "Security group for container traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05db40e061281b975",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ranky-sg",
            "name_prefix": "",
            "owner_id": "637423483220",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0380554537269c437"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ranky-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ranky-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:637423483220:subnet/subnet-086f8f1d270510fe9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-086f8f1d270510fe9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423483220",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ranky-vpc"
            },
            "tags_all": {
              "Name": "ranky-vpc"
            },
            "vpc_id": "vpc-0380554537269c437"
          },
          "dependencies": [
            "aws_vpc.ranky-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ranky-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:637423483220:vpc/vpc-0380554537269c437",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09a3b93f8c41c8089",
            "default_route_table_id": "rtb-03591ab28f36d7de9",
            "default_security_group_id": "sg-093b82c0decd27dff",
            "dhcp_options_id": "dopt-046345df39db3851a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0380554537269c437",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03591ab28f36d7de9",
            "owner_id": "637423483220"
          }
        }
      ]
    }
  ]
}